--- a/netbox-junos-ex-test.j2
+++ b/netbox-junos-ex-test.j2
@@ -8,6 +8,9 @@ if exists
 #}
 system {
     host-name {{ device.name }};
+    root-authentication {
+        encrypted-password "$6$ZwmTCtsz$Mr50GDZGgrK4091jhvY.Fc6WWMERo66X48zkr4Zgn1OG1kjzkgdD2SIGM0c8iv7rLBCDDAraPCSWbIDaMiDj21";
+    }
     login {
         idle-timeout 60;
     }
@@ -26,10 +29,12 @@ system {
         user * {
             any emergency;
         }
+        file interactive-commands {
+            interactive-commands any;
+        }
         file messages {
             any notice;
-            authorization any;
-            archive size 2m files 5;
+            authorization info;
         }
     }
 }
@@ -77,7 +82,6 @@ interfaces {
             minimum-links 1;
         }
         {%- endif %}
-    }
         {%- if "." in interface.name %}
         unit {{ unit_id }} {
         {%- else %}
