Minor correction to junos-ex-template

--- a/netbox-junos-ex-template.j2
+++ b/netbox-junos-ex-template.j2
@@ -1,7 +1,9 @@
 {# 
+**************************************************
 To-Do:
-2. Auto assign interface description based on connections
-if exists
+1. Auto assign interface description based on 
+connections if exists
+
 **************************************************
 ###         System configuration               ###
 **************************************************
